  --  fixed: fs::mkdir() wouldn't create relative directory if upper directory is missing
  --  error message in case of recursive error is more detailed now(blank screen problem when db params are invalid)
  --  db_module now doesn't connect and select database in constructor, instead db_factory is a more appropriate place for this
  --  cart stuff removed
  --  critical session class bug fix: db update could fail under some conditions
  --  session_history_manager little refactoring
  --  remove publish/unpublish actions from faq_folder_container_controller
  --  fixed: full_page_cache_filter & image_cache_filter won't do anything if response is already filled
  --  http_response :: is_redirected() method added
  --  '@' prepended to all setup defines
  --  initial version of <limb:VERSION> tag which renders contents of LIMB_DIR/version.php
  --  html templates comments cleanup
  --  TestManager class removed
  --  SimpleTest removed from svn, you have to download it and set up manually
  --  initial implementation of multi move functionality
  --  tree :: can_move_tree($id, $target_id) method added
  --  fixed: selector_tag won't make grid_list insert a form if it's already inside form_tag
  --  change_controller_action added which allows to change controller attached to the site object node
  --  object :: merge_attributes() method added
  --  object :: import_attributes() method refactored, there's no $merge flag anymore
  --  fixed: tree_toggle_action action wouldn't call tree::initialize_expanded_parents() in the case of 'recursive_search_for_node' present in request
  --  phpbb, chat stuff removed for now
  --  strings file format changed: you can't specify [extends] section since it's useless yet requires additional resources at run time
  --  image variations create/update a bit cleaner implementation(yet ugly, however this is fixed in 3.0)
  --  refactored create_file_action.class.php and edit_file_action.class.php